--- a/index.html
+++ b/index.html
@@ -39,14 +39,10 @@
           <a href="#">Baixar meu e-book</a>
         </li>
         <li>
-          <a href="https://github.com/jair-silvajr" target="_blank"
-            >Ver meu portifólio</a
-          >
+          <a href="https://github.com/jair-silvajr" target="_blank" >Ver meu portifólio</a>
         </li>
         <li>
-          <a href="https://rocketseat.com.br/explorer" target="_blank"
-            >Conheça o explorer</a
-          >
+          <a href="https://rocketseat.com.br/explorer" target="_blank">Conheça o explorer</a>
         </li>
       </ul>
       <div id="social-links">
