--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br" class="light">
-  
+
 </html>
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -31,7 +31,8 @@
         <span></span>
       </div>
 
-  
+
+      <ul>
         <li>
           <a href="#">Inscreva-se no NWL</a>
         </li>
@@ -39,10 +40,14 @@
           <a href="#">Baixar meu e-book</a>
         </li>
         <li>
-          <a href="https://github.com/jair-silvajr" target="_blank" >Ver meu portifólio</a>
+          <a href="https://github.com/jair-silvajr" target="_blank"
+            >Ver meu portifólio</a
+          >
         </li>
         <li>
-          <a href="https://rocketseat.com.br/explorer" target="_blank">Conheça o explorer</a>
+          <a href="https://rocketseat.com.br/explorer" target="_blank"
+            >Conheça o explorer</a
+          >
         </li>
       </ul>
       <div id="social-links">
