--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
         </a>
       </div>
       <footer>
-        Feito com ♥ pela
-        <a href="https://rocketseat.com.br" target="_blank"> Rocketseat </a>
+        Desenvolvido por Jair &copy; 2023
       </footer>
     </div>
     <script
